control/groups update
